Fix merge conflicts